force-app/main/default/objects/plaunch__ScriptAndPitch_Script_Links__c/plaunch__ScriptAndPitch_Script_Links__c.object-meta.xml
<CustomObject>
    <label>ScriptAndPitch Script Links</label>
    <nameField>
        <label>Button Text</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ScriptAndPitch Script Links</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>