force-app/main/default/objects/plaunch__ScriptAndPitch_Script_Links__c/fields/plaunch__From__c.field-meta.xml
<CustomField>
    <fullName>plaunch__From__c</fullName>
    <label>From</label>
    <referenceTo>plaunch__ScriptAndPitch_Script__c</referenceTo>
    <relationshipLabel>ScriptAndPitch Script Links</relationshipLabel>
    <relationshipName>ScriptAndPitch_Script_Links</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>