force-app/main/default/objects/plaunch__ScriptAndPitch_Script_Links__c/fields/plaunch__To__c.field-meta.xml
<CustomField>
    <fullName>plaunch__To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>To</label>
    <referenceTo>plaunch__ScriptAndPitch_Script__c</referenceTo>
    <relationshipLabel>ScriptAndPitch Script Links (To)</relationshipLabel>
    <relationshipName>ScriptAndPitch_Script_Links1</relationshipName>
    <type>Lookup</type>
</CustomField>