force-app/main/default/objects/plaunch__ScriptAndPitch_Script_Links__c/fields/plaunch__Track__c.field-meta.xml
<CustomField>
    <fullName>plaunch__Track__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If enabled, pipelaunch is going to track this link selection in the event system for the log</description>
    <label>Track</label>
    <type>Checkbox</type>
</CustomField>